plans/260417-1715-insights-foundation/reports/a3-evidence.txt
--- BAD case ---
exit=2
Syntax error(s) in edited files:
/tmp/bad.py: Traceback (most recent call last):
  File "<string>", line 1, in <module>
  File "/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/ast.py", line 50, in parse
    return compile(source, filename, mode, flags,
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<unknown>", line 1
    def x(:
          ^
SyntaxError: invalid syntax

--- GOOD case ---
exit=0
--- __pycache__ diff (should be empty) ---
(no diff = PASS)
